@@ -21,6 +21,9 @@ module ActiveSupport
       @utc ||= time_zone.local_to_utc(@time)
     end
     alias_method :comparable_time, :utc
+    alias_method :getgm, :utc
+    alias_method :getutc, :utc
+    alias_method :gmtime, :utc
   
     # Returns the underlying TZInfo::TimezonePeriod for the local time
     def period
@@ -47,18 +50,23 @@ module ActiveSupport
     def localtime
       utc.getlocal
     end
+    alias_method :getlocal, :localtime
   
     def dst?
       period.dst?
     end
+    alias_method :isdst, :dst?
   
     def utc?
       time_zone.name == 'UTC'
     end
+    alias_method :gmt?, :utc?
   
     def utc_offset
       period.utc_total_offset
     end
+    alias_method :gmt_offset, :utc_offset
+    alias_method :gmtoff, :utc_offset
   
     def formatted_offset(colon = true, alternate_utc_string = nil)
       utc? && alternate_utc_string || utc_offset.to_utc_offset_s(colon)
@@ -76,9 +84,14 @@ module ActiveSupport
     def xmlschema
       "#{time.strftime("%Y-%m-%dT%H:%M:%S")}#{formatted_offset(true, 'Z')}"
     end
+    alias_method :iso8601, :xmlschema
   
     def to_json(options = nil)
       %("#{time.strftime("%Y/%m/%d %H:%M:%S")} #{formatted_offset(false)}")
+    end
+    
+    def to_yaml(options = {})
+      time.to_yaml(options).gsub('Z', formatted_offset(true, 'Z'))
     end
     
     def httpdate
@@ -112,6 +125,10 @@ module ActiveSupport
       utc <=> other
     end
     
+    def eql?(other)
+      utc == other
+    end
+    
     # Need to override #- to intercept situation where a Time or Time With Zone object is passed in
     # Otherwise, just pass on to method missing
     def -(other)
@@ -129,10 +146,16 @@ module ActiveSupport
     def to_i
       utc.to_i
     end
+    alias_method :hash, :to_i
+    alias_method :tv_sec, :to_i
   
     # A TimeProxy acts like a Time, so just return self
     def to_time
       self
+    end
+    
+    def to_datetime
+      utc.to_datetime.new_offset(Rational(utc_offset, 86_400))
     end
     
     # so that self acts_like?(:time)
